--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "winston": "^0.7.3",
     "redis": "^0.11.0",
-    "bluebird": "^2.2.2"
+    "bluebird": "^2.2.2",
+    "express": "^4.6.1",
+    "request": "^2.39.0",
+    "body-parser": "^1.5.0"
   }
 }
