--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express": "^4.6.1",
     "request": "^2.39.0",
     "body-parser": "^1.5.0"
-  }
+  },
+	"scripts": {
+		"start": "node lib/main.js"
+	}
 }
