--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bluebird": "^2.2.2",
     "express": "^4.6.1",
     "request": "^2.39.0",
-    "body-parser": "^1.5.0"
+    "body-parser": "^1.5.0",
+    "node.extend": "^1.0.10"
   },
-	"scripts": {
-		"start": "node lib/main.js"
-	}
+  "scripts": {
+    "start": "node lib/main.js"
+  }
 }
