--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aol-cachelink-service",
+  "name": "cachelink-service",
   "version": "0.1.0",
   "dependencies": {
     "winston": "^0.7.3",
@@ -11,6 +11,6 @@
     "node.extend": "^1.0.10"
   },
   "scripts": {
-    "start": "node lib/main.js"
+    "start": "bin/cachelink"
   }
 }
