--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"engines": {
 		"node": "^0.10.0"
 	},
+  "main": "lib/index.js",
   "version": "0.1.3",
   "dependencies": {
     "winston": "^0.7.3",
