--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.6.1",
     "request": "^2.39.0",
     "body-parser": "^1.5.0",
-    "node.extend": "^1.0.10"
+    "node.extend": "^1.0.10",
+    "basic-auth": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^1.21.3",
