--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "url": "https://github.com/aol/cachelink-service/issues"
   },
   "engines": {
-    "node": "^0.10.0"
+    "node": "^6.0"
   },
   "main": "lib/index.js",
-  "version": "4.0.2",
+  "version": "5.0.0",
   "dependencies": {
-    "winston": "^0.7.3",
-    "redis": "^0.11.0",
-    "bluebird": "^2.2.2",
-    "express": "^4.6.1",
-    "request": "^2.39.0",
-    "body-parser": "^1.5.0",
-    "node.extend": "^1.0.10",
-    "basic-auth": "^1.0.0"
+    "basic-auth": "^1.1.0",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "redis": "^2.7.1",
+    "request": "^2.81.0",
+    "uuid": "^3.0.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "mocha": "^1.21.3",
-    "jshint": "^2.5.2"
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "jshint": "^2.9.4",
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "start": "bin/cachelink",
